# Xiao8

./: .cursorrules  .gitattributes  .gitignore  README.MD  agent_server.py  launcher.py  main_server.py  manager.py  memory_server.py  monitor.py  pyproject.toml  requirements.txt  test.py
brain/: __init__.py  analyzer.py  computer_use.py  deduper.py  mcp_client.py  planner.py  processor.py  task_executor.py
config/: __init__.py  api_template - 副本.py  api_template.py  live2d_emotion_mapping.json  prompts_chara.py  prompts_sys.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: Live2D_Emotion_System.md  Live2D_Manager_Usage.md  README_en.md  README_ja.md  export_exe_tutorial.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.web.config.ts
launcher/: Cargo.toml  build.rs
launcher/src/: main.rs
main_helper/: core.py  cross_server.py  omni_offline_client.py  omni_realtime_client.py  tts_helper.py
main_logic/: core.py  cross_server.py  omni_offline_client.py  omni_realtime_client.py  tts_client.py
main_routers/: characters_router.py  live2d_router.py  memory_router.py  shared_state.py  system_router.py  websocket_router.py  workshop_router.py
memory/: recent.py  router.py  semantic.py  settings.py  timeindex.py
plugin/: user_plugin_server.py
react_web/: REACT_REFACTOR_PLAN.md  README.md  global.d.ts  package-lock.json  package.json  tsconfig.json  vite.components.config.ts  vite.global.config.ts  vite.react-bundle.config.ts  vite.react-dom-client-bundle.config.ts  vite.request.config.ts
static/: a2942.js  app.js  (+17 more)
(+91 files in other folders)
