[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", default-features = true }
open = "5"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[build]
target = "x86_64-pc-windows-msvc"
build = "build.rs"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[build-dependencies]
winres = "0.1"